# inference-pareto

./: GOAL.md  README.md  benchmark.py  compare_architectures.py  compare_real_models.py  config.py  experiments.py  main.py  plot_architecture_comparison.py  plot_time_matched.py  pyproject.toml  time_matched.py  visualize.py
results/raw/: architecture_comparison.csv  depth_sweep.csv  max_width_search.csv  max_width_summary.csv  param_matched_sweep.csv  real_model_comparison.csv  time_matched.csv  width_sweep.csv
