[project]
name = "inference-pareto"
version = "0.1.0"
description = "Depth vs width latency trade-off study for transformer models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "matplotlib",
    "pandas",
    "numpy",
    "tqdm",
]

[project.scripts]
pareto = "main:main"
